# winbar

./: .gitignore  Cargo.toml  LICENSE  README.md  winbar.json
.github/workflows/: rust.yml
docs/: configuration.md  styling.md
docs/assets/: winbar.demo.json
docs/components/: datetime.md  static_text.md
src/: color.rs  config.rs  main.rs  server.rs  winbar.rs  windows_api.rs
src/component/: datetime.rs  manager.rs  mod.rs  static_text.rs
winbar/: Cargo.toml
winbar-core/: Cargo.toml
winbar-core/src/: client.rs  lib.rs  protocol.rs  styles.rs  windows_api.rs
winbar-plugin/: Cargo.toml
winbar-plugin-test/: Cargo.toml
winbar-plugin-test/src/: lib.rs
winbar-plugin/src/: lib.rs  plugin.rs
winbar/src/: cli.rs  client.rs  color.rs  config.rs  container.rs  lib.rs  main.rs  protocol.rs  server.rs  status_bar.rs  styles.rs  windows_api.rs
winbar/src/component_impl/: datetime.rs  manager.rs  mod.rs  plugin.rs  static_text.rs
winbar/src/config/: color.rs  mod.rs
winbar/src/res/: config_exists_warning.txt  config_gen_success.txt
winbar/src/util/: hex_parser.rs  mod.rs  rect.rs
winbarc/: Cargo.toml
winbarc/src/: cli.rs  main.rs
