[package]
name = "winbar-core"
version = "0.2.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
async-trait = "0.1.80"
getset = "0.1.2"
regex = "1.10.4"
tracing = { version = "0.1.40", features = ["attributes"] }
tokio = { version = "1.37.0", features = ["macros", "sync", "net", "io-util"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
winbar-plugin = { path ="../winbar-plugin" }
windows = { version = "0.54.0", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_GdiPlus",
] }
