[package]
name = "winbar-plugin"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[features]
impl = []

[dependencies]
anyhow = "1.0.86"
getset = "0.1.2"
libloading = "0.8.3"
windows = { version = "0.54.0", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
] }
